# routes/api.js
@@ -1,15 +1,15 @@
 const express = require("express");
 const router = express.Router();
 const { classCreateNew, classGetOne, classGetAll, updateClassData } = require("../controllers/ClassController");
-const { studentCreateNew, studentGetOne, studentGetAll, studentUpdatePassword, updateStudentData } = require("../controllers/AccountController");
+const { studentCreateNew, studentGetOne, studentGetAll, updateStudentData } = require("../controllers/AccountController");
 const { userCreateNew, userGetOne, userGetAll, updateUserData } = require("../controllers/UserController");
-
+const { facultyGetOne, facultyGetAll, facultyCreateNew } = require("../controllers/FacultyController");
+const multerUpload = require("../utils/multer");
 // STUDENT
-router.get("/account/get/:id_student", studentGetOne);
-router.get("/account/get-all", studentGetAll);
-router.post("/account/new", studentCreateNew);
-router.post("/account/change-password", studentUpdatePassword);
-router.patch("/account/:id_student", updateStudentData);
+router.get("/student/get/:id_student", studentGetOne);
+router.get("/student/get-all", studentGetAll);
+router.post("/student/new", studentCreateNew);
+router.patch("/student/:id_student", updateStudentData);
 // --------------------------------------
 
 // CLASS
@@ -23,8 +23,29 @@ router.patch("/class/:id_class", updateClassData);
 router.get("/user/get/:id_user", userGetOne);
 router.get("/user/get-all", userGetAll);
 router.post("/user/new", userCreateNew);
-// router.post("/user/change-password", userUpdatePassword);
 router.patch("/user/:id_user", updateUserData);
 // --------------------------------------
+
+// FACULTY
+router.get("/faculty/get/:id_faculty", facultyGetOne);
+router.get("/faculty/get-all", facultyGetAll);
+router.post("/faculty/new", facultyCreateNew);
+// --------------------------------------
+
+// TEST
+router.post("/test/upload/:id_student", multerUpload, (req, res, next) => {
+    /*
+          #swagger.consumes = ['multipart/form-data']  
+          #swagger.parameters['avatar'] = {
+              in: 'formData',
+              type: 'file',
+              required: 'true',
+              description: 'Some description...',
+        } 
+        */
+    const file = req.file || null;
+    console.log("🚀 ~ file: api.js:39 ~ Router.post ~ req:", file);
+    res.end("Upload test");
+});
 
 module.exports = router;
