# services/validateSchema/classSchema.js
@@ -1,7 +1,7 @@
 const Joi = require("joi");
 
 const classSchema = Joi.object({
-    course_year: Joi.number().integer().min(19).max(23).required(),
+    course_year: Joi.string().min(1).max(30).required(),
     id_faculty: Joi.string().min(3).max(30).required(),
 });
 
